--- a/example.html
+++ b/example.html
@@ -9,8 +9,7 @@
 
 <body>
 	<div class = "animation">Example</div>
-	<div>
-		<div class = "animated_div">Example 2</div>
-	</div>
+	<div class = "animated_div">Example 2</div>
+	<div class = "timing_animation">Example 3</div>
 </body>
 </html>
