--- a/animations.html
+++ b/animations.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<meta charset="utf-8"/>
-	<title>Transiciones</title>
+	<title>Animaciones</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
@@ -10,6 +10,16 @@
 <body>
 
 	<section class="header">
+	<ul id="header" class="menu" style="top: 60%;">
+			<li class="menu-item"><a href="index.html" class="active"> Inicio </a></li>
+			<li class="menu-item"><a href="transitions.html" class="active"> Transiciones </a></li>
+			<li class="menu-item">
+			<a href="animations.html" class="active"> Animaciones </a></li>
+			<li class="menu-item">
+			<a href="website-examples.html" class="active"> Ejemplos </a></li>
+			<li class="menu-item"><a href="exercises.html" class="active"> Ejercicios </a></li>
+			<div class="close"></div>
+		</ul> 
 		<h1>Animaciones</h1>
 	</section>
 	<section class="content">
@@ -53,10 +63,7 @@
 	<a href="http://waitanimate.eggbox.io/#/" class="active"> http://waitanimate.eggbox.io/#/ </a></br>
 	
 	</div>
-	<div>
-		<h2>Ejercicio</h2>
-		Realizar una animación para representar la carga de otra página.
-	</div>
+	
 	</section>
 </body>
 </html>
