--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
 </head>
 <body>
 	<div class="container">
-		<section id="header" class="home-intro" style="top: 60%;">
-			<a href="index.html" class="active"> Inicio </a>
-			<a href="transitions.html" class="active"> Transiciones </a>
-			<a href="animations.html" class="active"> Animaciones </a>
-			<a href="website-examples.html" class="active"> Sitios web de ejemplo </a>
+		<ul id="header" class="menu" style="top: 60%;">
+			<li class="menu-item"><a href="index.html" class="active"> Inicio </a></li>
+			<li class="menu-item"><a href="transitions.html" class="active"> Transiciones </a></li>
+			<li class="menu-item">
+			<a href="animations.html" class="active"> Animaciones </a></li>
+			<li class="menu-item">
+			<a href="website-examples.html" class="active"> Ejemplos </a></li>
+			<li class="menu-item"><a href="exercises.html" class="active"> Ejercicios </a></li>
 			<div class="close"></div>
-		</section> 
+		</ul> 
 		<section class="header">
 			<h1>Transiciones y animaciones </h1>
 			<h3>Realizado por: Gloriana Garro y Luis Leandro </h3>
