--- a/exercises.html
+++ b/exercises.html
@@ -35,11 +35,11 @@
 	</div>
 		<div class="ex1">
 		<p>2. Agregar un objeto a un tablero y hacer que este se mueva por las casillas del tablero usando transiciones y animaciones. </p>
-		<p>En este ejemplo se muestra un jugador que se mueve por una fila pero lo hace sin transiciones ni animaciones </p>
+		<p>En este ejemplo se muestra un jugador que se mueve por una fila  </p>
 		<section id="wrap"></section>
 		<button onclick="movePlayerLeft()"> Mover Izquierda </button>
 		<button onclick="movePlayerRight()"> Mover Derecha </button>
-   
+		
 		<script src="loadGame.js"> </script>
 		</div>
 	</section>
